# pysgtelib

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  __init__.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
pysgtelib/: __init__.py  pysgtelib.pyi
src/: pywrap.cpp
tests/: test_pysgtelib.py
